argocd/kubecost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kubecost.oulcaid.com
      secretName: kubecost-tls
  rules:
    - host: kubecost.oulcaid.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubecost-frontend
                port:
                  number: 9090
